--- a/src/App.css
+++ b/src/App.css
@@ -12,7 +12,7 @@ main{
 
 .Play-btn{
   background-color: transparent;
-  color: #a8dadc;
+  color: #e63946;
   border: 0;
   display: inline-block;
   width: 100px;
@@ -20,6 +20,15 @@ main{
   margin-block-start: 20px;
 }
 
+.Pause-btn{
+  background-color: transparent;
+  color: #bde0fe;
+  border: 0;
+  display: inline-block;
+  width: 100px;
+  cursor: pointer;
+  margin-block-start: 20px;
+}
 
 
 
