--- a/src/App.css
+++ b/src/App.css
@@ -42,6 +42,13 @@ main{
   text-transform: uppercase;
 }
 
+.set-box{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 15px;
+}
+
 
 
 
